syntax = "proto3";

package hoop_registry;

import "google/protobuf/empty.proto";

// Service definition
service HoopRegistry {
  // Register a new hoop to the registry
  rpc RegisterHoop (RegisterHoopRequest) returns (RegisterHoopResponse);

  // Get metadata for a specific hoop by name
  rpc GetHoopMetadata (GetHoopMetadataRequest) returns (GetHoopMetadataResponse);

  // List all registered hoops
  rpc ListHoop (google.protobuf.Empty) returns (ListHoopResponse);

  // Update metadata for a specific hoop
  rpc UpdateHoopMetadata (UpdateHoopMetadataRequest) returns (UpdateHoopMetadataResponse);

  // Delete a hoop from the registry
  rpc DeleteHoop (DeleteHoopRequest) returns (DeleteHoopResponse);

  // Health check endpoint
  rpc HealthCheck (google.protobuf.Empty) returns (google.protobuf.Empty);

  // Search hoops by keyword
  rpc SearchHoop (SearchHoopRequest) returns (ListHoopResponse);


}

// Request to register a new hoop
message RegisterHoopRequest {
  string name = 1;
  string description = 2;
  string input_schema = 3;
  string output_schema = 4;
  string version = 5;
  string target_service = 6;
  string owner = 7;
}

// Response after registering a hoop
message RegisterHoopResponse {
  string status = 1;
  string message = 2;
}

// Request to get metadata of a specific hoop
message GetHoopMetadataRequest {
  string name = 1; // Nama hoop yang ingin diambil
}

// Response with metadata of the hoop
message GetHoopMetadataResponse {
  string name = 1;
  string description = 2;
  string input_schema = 3;
  string output_schema = 4;
  string version = 5;
  string target_service = 6;
  string owner = 7;
  string created_at = 8;
}

// Response listing all hoops
message ListHoopResponse {
  repeated GetHoopMetadataResponse hoops = 1;
}

// Request to update metadata of a specific hoop
message UpdateHoopMetadataRequest {
  string name = 1;
  string description = 2;
  string input_schema = 3;
  string output_schema = 4;
  string version = 5;
  string target_service = 6;
  string owner = 7;
}

// Response after updating hoop metadata
message UpdateHoopMetadataResponse {
  string status = 1;
  string message = 2;
}

// Request to delete a hoop
message DeleteHoopRequest {
  string name = 1;
}

// Response after deleting a hoop
message DeleteHoopResponse {
  string status = 1;
  string message = 2;
}


// Request untuk search hoop
message SearchHoopRequest {
  string keyword = 1;
}
